2003-04-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile (buttons):
	(all): New target.
	(out/$(outball)): Add images too.

	* format-page.py: Further development.

	* lily-button.scm: 
	* aqua-pill-button.scm: 
	* newweb.css: New file.

2003-03-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile (upload): New target.

2003-03-30  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* add ChangeLog
